# hierarchical_nas_construction

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
benchmarks/evaluation/: train.py  utils.py
benchmarks/objectives/: addNIST.py  cifarTile.py  cifar_activation.py  darts_cnn.py  hierarchical_nb201.py  utils.py
benchmarks/objectives/custom_nb201/: DownsampledImageNet.py  cell_operations.py  config_utils.py  custom_augmentations.py  evaluate_utils.py  genotypes.py  infer_cell.py  tiny_network.py
benchmarks/objectives/custom_nb201/configs/: LESS.config
benchmarks/objectives/darts_utils/: train.py  train_search.py
benchmarks/search_spaces/activation_function_search/: graph.py  kvary_operations.py  stacking.py  topologies.py  unary_operations.py
benchmarks/search_spaces/activation_function_search/cifar_models/: __init__.py  resnet.py
benchmarks/search_spaces/darts_cnn/: graph.py  model.py  net2wider.py  operations.py  primitives.py  topologies.py  utils.py  visualize.py
benchmarks/search_spaces/hierarchical_nb201/: graph.py  primitives.py  topologies.py
configs/: base.yaml
experiments/: darts_evaluate.py  darts_train_search.py  optimize.py  optimize_naswot.py  surrogate_regression.py  utils_modelsummary.py  zero_cost_rank_correlation.py
experiments/darts_utils/: architect.py  cell_operations.py  genotypes.py  net2wider.py  search_cells.py  search_model.py  search_model_gdas.py  utils.py
experiments/dataset_generation/: data_packager.py  gen_cifartile.py  gen_gutenberg.py  gen_language_data.py  gen_multnist_data.py  visualize_examples.py
experiments/zero_cost_proxies_utils/: __init__.py  epe_nas.py  fisher.py  grad_norm.py  grasp.py  jacov.py  l2_norm.py  model_stats.py  nwot.py  p_utils.py  plain.py  snip.py  synflow.py  zen.py
